Begin fixing table on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -140,6 +140,9 @@ tr {
     display: block;
   }
 }
+thead {
+  table-layout: fixed;
+}
 th {
   font-weight: bold;
   text-align: left;
