--- a/app/assets/stylesheets/basscss.css
+++ b/app/assets/stylesheets/basscss.css
@@ -84,8 +84,8 @@
 .no-select {
   -webkit-user-select: none;
   -moz-user-select: all;
-  -ms-user-select: all; 
-  user-select: none; 
+  -ms-user-select: all;
+  user-select: none;
 }
 .no-wrap {
   white-space: nowrap;
@@ -123,9 +123,11 @@
 }
 .overflow-scroll {
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 .overflow-auto {
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 .clearfix:after,
 .clearfix:before {
